--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - "5433:5432"
     volumes:
       - pg-data:/var/lib/postgresql/data
+      - ./database:/database
     networks:
       - pg-network
 
